src/test/deca/syntax/valid/SansObjet/DeclVar-NoInit.deca
// Description:
//    Declaration of a single variable without initialization.
//
// Results:
//    (void)
//
// Historique:
//    cree le 01/01/2022

{
        int x;
}
