src/test/deca/syntax/invalid/SansObjet/Cast-NoOp.deca
// Description:
//    Declaration of a int variable using a int cast on a int literal .
// 
// Results:
//     nSyntax error on line 12
// 
// Historique: 
//    cree le 14/01/2022 

{
    float y = 17;
    int x =  (int) y) ;
}
